--- a/src/main/resources/templates/edit_form.html
+++ b/src/main/resources/templates/edit_form.html
@@ -15,7 +15,7 @@
             <table border="0" cellpadding="10">
                 <tr>
                     <td>ID:</td>
-                    <td><input type="text" th:field="*{id}" /></td>
+                    <td><input type="text" th:field="*{id}" readonly="readonly" /></td>
                 </tr>            
                 <tr>
                     <td>Item Name:</td>
